k8s/infra/controllers/argocd/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "argocd.emisia.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
